style/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{
    padding: 0;
    margin: 0;
}

/* HOMEPAGE */

/* HEADER */

main{
    overflow-x: hidden;

}
.background{
    background-image: url(../img/homapage-banner-img.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}

header {
    background-color: transparent;
    height: auto;
    width: 100%;
    margin: 0 auto;
}
.intro{
    display: flex;
    justify-content: flex-end;
    align-items: center;
    flex-direction: column;
    width: 100%;
    height: 105vh;
}

.homepage-banner {
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding-top: 30px;
    max-width: 90%;
    flex-wrap: wrap;
}

.homepage-banner a{
    text-decoration: none;
    color: white;
}

.logo {
    margin-left: 15%;
    margin-top: 2rem;
    height: 50px;
    width: 320px;
    margin-right: auto;
}

.logo img{
    width: auto;
    height: 100%;
}

.homepage-nav {
    font-family: 'Poppins', sans-serif;
    display: flex;
    flex-direction: row;
    align-items: center;
    transition: all 0.25s;
}

.li-nav, .r-soc {
    color: white;
    margin-top: 2rem;
   
    list-style-type: none;
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
}

.r-soc{
    margin-bottom: 10px;
}
.li-nav-item {
    margin-left: 7vh;
    font-size: 1rem;
    font-weight: 700;
    line-height: 1px;
    padding: 10px 0 ;
}

.r-soc-item a {
    color: white;
    opacity: 0.8;
    font-size: 1.5rem;
    margin-left: 2rem;
}

.new-single {
    color: white;
    font-family: 'Poppins', sans-serif;
    font-size: 2rem;
}

.new-single, .feel-the-rhythm{
    text-align: left;
    margin-left: 10vh;
}

.text-homepage{
    width: 90%;
    height: auto;
    padding-bottom: 150px;
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin-bottom: 50px;
}

.dotsmenu{
    display: none;
    height: 30px;
    width: auto;
}

.dotsmenu img{
    width: auto;
    height: 100%;
}

.feel-the-rhythm {
    font-family: 'Poppins', sans-serif;
    font-size: 8rem;
    font-weight: bolder;
    -webkit-text-stroke: 1px white;
    -webkit-text-fill-color:transparent;
}

/* Button */

/* Absolute Center */
.abs-center{
	margin: auto;
	position: fixed;
	top:0; right:0; bottom:0; left:0;
}
/*Container for audio player*/
#audioplayer{
	width: 90%;
	height: 60px;
	margin: auto;
}
/* Play/Pause Button */
#pButton{
	height:60px;
	width: 60px;
	border: none;
	background-size: 50% 50%;
	background-repeat: no-repeat;
	background-position: center;
	float:left;
	outline:none;
    margin-top: -10px;

}
/*Classes for play/pause button background*/
.play{background: url('../img/play.png') ;}
.pause{background: url('../img/pause.png') ;}

#timeline{
	width: 85%;
	height: 5px;
	background: rgb(255, 255, 255);
	float: left;
	border-radius: 15px;
    opacity: 0.5;
}

.timeline_time{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}
/*Grabable Playhead*/
#playhead{
	cursor: pointer;
	width: 5px;
	height: 30px;
    opacity: 1;
	margin-top: -11px;
	background: white;
}

.musicTime{
    display: flex;
    flex-direction: row;
    align-items: center;
    color: white;
    font-family: Poppins;
    font-size: 25px;
    margin-left: 1vh;
    width: 200px;
}

.musicbar{
    margin-left: 0px;
}


/* BURGER MENU */

.toggler{
    z-index: 2;
    position: absolute;
    top: 6vh;
    right: 2vh;
    cursor: pointer;
    width: 50px;
    height: 50px;
    opacity: 0;
}


.hamburger{
    position: absolute;
    top: 6vh;
    right: 2vh;    
    width: 50px;
    height: 50px;
    background-image: url(../img/hamburger.png);
    background-size: cover;
    filter: invert(100%) saturate(3207%) hue-rotate(0deg) brightness(95%) contrast(80%);    
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 50px;
}
.toggler:checked ~ .homepage-banner .homepage-nav{
    opacity: 0;
    transform: translateX(400px);
}

/* BURGER MENU */


/* Next Gig */

.next-gig{
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    color: white;
    width: 85%;
    height: auto;
    background-color: #202020;
    position: absolute;
    left: 5.5%;
    top: 102%;
    border-radius: 10px;
    padding: 50px 2vw 65px 2vw;
    overflow: hidden;
    z-index: 1;
    box-shadow: 0 5px 10px 0 darkslategray;
    flex-wrap: wrap;
}

.next-gig::before{
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url(../img/spectrum.png);
    background-position: center;
    background-size: cover;
    opacity: 0.1;
    z-index: -1;
}

.btn-buy-tickets{
    text-decoration: none;
    color: white;
    background-color: #8121e0;
    padding: 25px 60px;
    border-radius: 5px;
    font-family: Poppins;
    text-transform: uppercase;
    font-weight: 700;
    font-size: 18px;
    margin-left: 6rem;
    white-space:nowrap;
}


.next-gig .text{
    width: 15vw;
    height: auto;
    font-family: Poppins;
}

.next-gig h3{
        font-size: 2vw;
        font-weight: 500;
        text-transform: capitalize;
}

.next-gig p{
    font-size: 1.5vw;
    font-weight: 300;
    line-height: 30px;
}

.next-gig .countdown h2{
    font-family: Poppins;
    font-size: 4vw;
    font-weight: 400;
}

.next-gig .countdown h5{
    font-family: Poppins;
    font-size: 2vw;
    font-weight: 700;
    text-transform: uppercase;
    line-height: 10px;
    margin-top: 1vh;
    opacity: 0.7;
}

.countdown{
    display: flex;
    flex-direction: row;
    margin-top: -20px;
}


.next-gig .countdown div{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 4rem;
}
/* ... */

